--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -57,13 +57,33 @@ tasks:
   bake:
     desc: Bake
     vars:
-      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.24,8.4.11"}}'
+      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.25,8.4.12"}}'
     cmds:
       - PHP_VERSIONS={{.PHP_VERSIONS}} docker buildx bake --set *.platform=linux/amd64
 
   bake:print:
     desc: Bake print options without building
     vars:
-      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.24,8.4.11"}}'
+      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.25,8.4.12"}}'
     cmds:
       - PHP_VERSIONS={{.PHP_VERSIONS}} docker buildx bake --print | $JQ
+
+  # trivy
+  trivy:
+    desc: Trivy
+    vars:
+      TRIVY_VERSION: '{{ .tv | default "latest" }}'
+      PHP_BASE: '{{ .pv | default "8.4.12-fpm-bookworm"}}'
+      TARGET: '{{ .t | default "ffmpeg" }}'
+    cmds:
+      - |
+        docker build \
+        --build-context php-base=docker-image://php:8.4.12-fpm-bookworm \
+        --target {{.TARGET}} \
+        -t toshy/trivy:{{.PHP_BASE}} .
+      - |
+        docker run \
+        -v /var/run/docker.sock:/var/run/docker.sock \
+        aquasec/trivy:{{.TRIVY_VERSION}} image \
+        --ignore-unfixed --severity CRITICAL,HIGH --exit-code 1 \
+        toshy/trivy:{{.PHP_BASE}}
